--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO = 'mongodb+srv://zkbug:zkbug@cluster0.9ufbnxn.mongodb.net/zk-bug?retryWrites=true&w=majority&appName=Cluster0'
+
+JWT_SECRET = 'leo007'
