--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "firebase": "^10.12.3",
     "flowbite-react": "^0.10.1",
+    "html-react-parser": "^5.1.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
