--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,8 @@
         "src": "/(.*)",
         "dest": "client/dist/$1"
       }
+    ],
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
