--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "client": "file:",
     "firebase": "^10.12.3",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.11.3",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
