--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.4",
     "zk-dir": "file:"
   }
